Linking between Message Boardand Threads and additional data on the Threads

--- a/src/View/index.html.twig
+++ b/src/View/index.html.twig
@@ -11,6 +11,7 @@
     <h3>{{ thread.title }}</h3>
     <i>Posted {{ thread.postedAt.format('F j Y g:i a') }}</i>
     <p>{{ thread.excerpt }}...</p>
+    <a href="/thread/{{ thread.id }}"> See details </a>
 </div>
 {% endfor %}
 </body>
