--- a/src/View/thread.html.twig
+++ b/src/View/thread.html.twig
@@ -23,7 +23,10 @@
         <div>
             <i>Posted {{ comment.postedAt.format('F j Y g:i a') }} by {{  comment.getUser.username }}</i>
             <p>{{ comment.content }}</p>
+            <a href="/comments/{{ comment.id }}/report">Report </a>
         </div>
+        <br>
+
     {% endfor %}
 
     <div>
