--- a/src/View/login.html.twig
+++ b/src/View/login.html.twig
@@ -1,20 +1,18 @@
-<html>
-<head>
-  <title>Login - Message Board</title>
-</head>
-<body>
-<h1>
-    Login
-</h1>
+{% extends "_base.html.twig" %}
+
+{% block title %}Login{% endblock %}
+
+{% block content %}
+
+<h1>{{ block('title') }}</h1>
 
 <form action="/user/login" method="post">
   Username:<br>
-  <input type="text" name="username" value="Username">
+  <input type="text" name="username" value="Username"><br>
   Password<br>
   <input type="password" name="password" value=""><br>
   <input type="submit" value="Submit">
 </form>
 <p>Don't have an account yet? Register <a href="/user/register">here</a></p>
 
-</body>
-</html>
+{% endblock %}
