--- a/src/View/login.html.twig
+++ b/src/View/login.html.twig
@@ -7,14 +7,14 @@
     Login
 </h1>
 
-<form action="/user/login" method="post">
+<form action="{{ loginURL() }}" method="post">
   Username:<br>
   <input type="text" name="username" value="Username">
   Password<br>
   <input type="password" name="password" value=""><br>
   <input type="submit" value="Submit">
 </form>
-<p>Don't have an account yet? Register <a href="/user/register">here</a></p>
+<p>Don't have an account yet? Register <a href="{{ registerURL() }}">here</a></p>
 
 </body>
 </html>
