--- a/src/View/includes/pagination.html.twig
+++ b/src/View/includes/pagination.html.twig
@@ -9,11 +9,11 @@
     <div class="pagination pagination-centered">
         <ul>
           {% if currentPage > 1 %}
-            <li><a href="?page={{ currentPage-1 }}">&larr;</a></li>
+           <li><a href="?page={{ currentPage-1 }}">&larr;</a></li>
 
             {% for i in range(1, extremePagesLimit)
                 if ( i < currentPage - nearbyPagesLimit ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                   <li><a href="{{ paginationUrl(i) }}">{{ i }}</a></li>
             {% endfor %}
 
             {% if extremePagesLimit + 1 < currentPage - nearbyPagesLimit %}
@@ -22,10 +22,9 @@
 
             {% for i in range(currentPage-nearbyPagesLimit, currentPage-1)
                 if ( i > 0 ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                <li><a href="{{ paginationUrl(i) }}">{{ i }}</a></li>
+                <li><a href="{{ paginationUrl(i) }}">{{ i }}</a></li>
             {% endfor %}
-          {% elseif showAlwaysFirstAndLast %}
-            <li><a href="#">Previous</a></li>
           {% endif %}
 
         <li class="active"><a href="#">{{ currentPage }}</a></li>
@@ -33,7 +32,7 @@
         {% if currentPage < lastPage %}
             {% for i in range(currentPage+1, currentPage + nearbyPagesLimit)
                  if ( i <= lastPage ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    <li><a href="{{ paginationUrl(i) }}">{{ i }}</a></li>
             {% endfor %}
 
             {% if  (lastPage - extremePagesLimit) > (currentPage + nearbyPagesLimit) %}
@@ -42,12 +41,10 @@
 
             {% for i in range(lastPage - extremePagesLimit+1, lastPage)
                 if ( i > currentPage + nearbyPagesLimit ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                <li><a href="{{ paginationUrl(i) }}">{{ i }}</a></li>
             {% endfor %}
 
             <li><a href="?page={{ currentPage+1 }}">&rarr;</a></li>
-        {% elseif showAlwaysFirstAndLast %}
-                <li><a href="?page={{ currentPage+1 }}">Next</a></li>
         {% endif %}
       </ul>
     </div>
