--- a/src/View/_base.html.twig
+++ b/src/View/_base.html.twig
@@ -2,16 +2,26 @@
 <html>
 <head>
     {% block head %}
-        <link rel="stylesheet" href="style.css" />
+
+        <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css"/>
+        <link rel="stylesheet" href="/style.css"/>
+
         <title>{% block title %}{% endblock %} - Message Board</title>
     {% endblock %}
 </head>
 <body>
-<div id="content">{% block content %}{% endblock %}</div>
-<div id="footer">
+<div>
+    {% block content %}{% endblock %}
     {% block footer %}
-        &copy; Copyright 2017 by <a href="https://github.com/yzuellig">Yannick Züllig </a> @ Biff Bang Pow.
-    {% endblock %}
+    <div>
+        <br>
+        <p>&copy; Copyright 2017 by
+            <a href="https://github.com/Taeljam">Jamil Hamdan </a> and
+            <a href="https://github.com/yzuellig">Yannick Züllig </a> @ Biff Bang Pow.
+        </p>
+
+        {% endblock %}
+    </div>
 </div>
 </body>
 </html>
