--- a/src/View/includes/pagination.html.twig
+++ b/src/View/includes/pagination.html.twig
@@ -6,14 +6,13 @@
     {# the number of pages that are displayed around the active page #}
     {% set nearbyPagesLimit = 2 %}
 
-    <div class="pagination pagination-centered">
-        <ul>
-          {% if currentPage > 1 %}
+    <ul class="pagination">
+        {% if currentPage > 1 %}
             <li><a href="?page={{ currentPage-1 }}">&larr;</a></li>
 
             {% for i in range(1, extremePagesLimit)
-                if ( i < currentPage - nearbyPagesLimit ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+            if ( i < currentPage - nearbyPagesLimit ) %}
+                <li><a href="?page={{ i }}">{{ i }}</a></li>
             {% endfor %}
 
             {% if extremePagesLimit + 1 < currentPage - nearbyPagesLimit %}
@@ -21,34 +20,33 @@
             {% endif %}
 
             {% for i in range(currentPage-nearbyPagesLimit, currentPage-1)
-                if ( i > 0 ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+            if ( i > 0 ) %}
+                <li><a href="?page={{ i }}">{{ i }}</a></li>
             {% endfor %}
-          {% elseif showAlwaysFirstAndLast %}
+        {% elseif showAlwaysFirstAndLast %}
             <li><a href="#">Previous</a></li>
-          {% endif %}
+        {% endif %}
 
         <li class="active"><a href="#">{{ currentPage }}</a></li>
 
         {% if currentPage < lastPage %}
             {% for i in range(currentPage+1, currentPage + nearbyPagesLimit)
-                 if ( i <= lastPage ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+            if ( i <= lastPage ) %}
+                <li><a href="?page={{ i }}">{{ i }}</a></li>
             {% endfor %}
 
             {% if  (lastPage - extremePagesLimit) > (currentPage + nearbyPagesLimit) %}
-               <li class="disabled"><a href="#">...</a></li>
+                <li class="disabled"><a href="#">...</a></li>
             {% endif %}
 
             {% for i in range(lastPage - extremePagesLimit+1, lastPage)
-                if ( i > currentPage + nearbyPagesLimit ) %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+            if ( i > currentPage + nearbyPagesLimit ) %}
+                <li><a href="?page={{ i }}">{{ i }}</a></li>
             {% endfor %}
 
             <li><a href="?page={{ currentPage+1 }}">&rarr;</a></li>
         {% elseif showAlwaysFirstAndLast %}
-                <li><a href="?page={{ currentPage+1 }}">Next</a></li>
+            <li><a href="?page={{ currentPage+1 }}">Next</a></li>
         {% endif %}
-      </ul>
-    </div>
+    </ul>
 {% endif %}
